--- a/.github/workflows/workflow-2.yml
+++ b/.github/workflows/workflow-2.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 
 on:
   schedule:
-    - cron: '*/1 * * * *' # Run every minute
+    - cron: '*/5 * * * *' # Run every 5 minute
 
 jobs:
   build:
