--- a/.github/workflows/workflow-5.yml
+++ b/.github/workflows/workflow-5.yml
@@ -6,613 +6,361 @@ on:
       - main
 
 jobs:
- - name: Stage 1
+  job_template:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Placeholder Step
+        run: echo "This is a placeholder step. Replace it with your actual steps."
+
+# Define jobs for the first 10 stages
+jobs:
+  - name: Stage 1
     runs-on: ubuntu-latest
     steps:
       - name: Step 1
         run: echo "Job 1, Stage 1"
 
- - name: Stage 2
+  - name: Stage 2
     runs-on: ubuntu-latest
     needs: Stage 1
     steps:
       - name: Step 2
         run: echo "Job 2, Stage 2"
 
- - name: Stage 3
+  - name: Stage 3
     runs-on: ubuntu-latest
     needs: Stage 2
     steps:
       - name: Step 3
         run: echo "Job 3, Stage 3"
 
- - name: Stage 4
+  - name: Stage 4
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 3
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
+      - name: Step 4
+        run: echo "Job 4, Stage 4"
 
- - name: Stage 5
+  - name: Stage 5
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 4
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 6
+      - name: Step 5
+        run: echo "Job 5, Stage 5"
+
+  - name: Stage 6
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 5
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 7
+      - name: Step 6
+        run: echo "Job 6, Stage 6"
+
+  - name: Stage 7
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 6
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 8
+      - name: Step 7
+        run: echo "Job 7, Stage 7"
+
+  - name: Stage 8
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 7
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 9
+      - name: Step 8
+        run: echo "Job 8, Stage 8"
+
+  - name: Stage 9
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 8
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 10
+      - name: Step 9
+        run: echo "Job 9, Stage 9"
+
+  - name: Stage 10
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 9
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 11
+      - name: Step 10
+        run: echo "Job 10, Stage 10"
+
+# Use the job template to repeat the pattern for the next set of stages
+jobs:
+  - name: Stage 11
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 10
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 12
+      - name: Step 11
+        run: echo "Job 11, Stage 11"
+
+  - name: Stage 12
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 11
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 13
+      - name: Step 12
+        run: echo "Job 12, Stage 12"
+
+  - name: Stage 13
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 12
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 14
+      - name: Step 13
+        run: echo "Job 13, Stage 13"
+
+  - name: Stage 14
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 13
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 15
+      - name: Step 14
+        run: echo "Job 14, Stage 14"
+
+  - name: Stage 15
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 14
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 16
+      - name: Step 15
+        run: echo "Job 15, Stage 15"
+
+  - name: Stage 16
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 15
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 17
+      - name: Step 16
+        run: echo "Job 16, Stage 16"
+
+  - name: Stage 17
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 16
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 18
+      - name: Step 17
+        run: echo "Job 17, Stage 17"
+
+  - name: Stage 18
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 17
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 19
+      - name: Step 18
+        run: echo "Job 18, Stage 18"
+
+  - name: Stage 19
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 18
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 20
+      - name: Step 19
+        run: echo "Job 19, Stage 19"
+
+  - name: Stage 20
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 19
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 21
+      - name: Step 20
+        run: echo "Job 20, Stage 20"
+
+  - name: Stage 21
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 20
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 22
+      - name: Step 21
+        run: echo "Job 21, Stage 21"
+
+  - name: Stage 22
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 21
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 23
+      - name: Step 22
+        run: echo "Job 22, Stage 22"
+
+  - name: Stage 23
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 22
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 24
+      - name: Step 23
+        run: echo "Job 23, Stage 23"
+
+  - name: Stage 24
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 23
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 25
+      - name: Step 24
+        run: echo "Job 24, Stage 24"
+
+  - name: Stage 25
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 24
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 26
+      - name: Step 25
+        run: echo "Job 25, Stage 25"
+
+  - name: Stage 26
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 25
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 27
+      - name: Step 26
+        run: echo "Job 26, Stage 26"
+
+  - name: Stage 27
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 26
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 28
+      - name: Step 27
+        run: echo "Job 27, Stage 27"
+
+  - name: Stage 28
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 27
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 29
+      - name: Step 28
+        run: echo "Job 28, Stage 28"
+
+  - name: Stage 29
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 28
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 30
+      - name: Step 29
+        run: echo "Job 29, Stage 29"
+
+  - name: Stage 30
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 29
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 31
+      - name: Step 30
+        run: echo "Job 30, Stage 30"
+
+  - name: Stage 31
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 30
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 32
+      - name: Step 31
+        run: echo "Job 31, Stage 31"
+
+  - name: Stage 32
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 31
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 33
+      - name: Step 32
+        run: echo "Job 32, Stage 32"
+
+  - name: Stage 33
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 32
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 34
+      - name: Step 33
+        run: echo "Job 33, Stage 33"
+
+  - name: Stage 34
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 33
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 35
+      - name: Step 34
+        run: echo "Job 34, Stage 34"
+
+  - name: Stage 35
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 34
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 36
+      - name: Step 35
+        run: echo "Job 35, Stage 35"
+
+  - name: Stage 36
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 35
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 37
+      - name: Step 36
+        run: echo "Job 36, Stage 36"
+
+  - name: Stage 37
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 36
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 38
+      - name: Step 37
+        run: echo "Job 37, Stage 37"
+
+  - name: Stage 38
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 37
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 39
+      - name: Step 38
+        run: echo "Job 38, Stage 38"
+
+  - name: Stage 39
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 38
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 40
+      - name: Step 39
+        run: echo "Job 39, Stage 39"
+
+  - name: Stage 40
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 39
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 41
+      - name: Step 40
+        run: echo "Job 40, Stage 40"
+
+  - name: Stage 41
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 40
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 42
+      - name: Step 41
+        run: echo "Job 41, Stage 41"
+
+  - name: Stage 42
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 41
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 43
+      - name: Step 42
+        run: echo "Job 42, Stage 42"
+
+  - name: Stage 43
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 42
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 44
+      - name: Step 43
+        run: echo "Job 43, Stage 43"
+
+  - name: Stage 44
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 43
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 45
+      - name: Step 44
+        run: echo "Job 44, Stage 44"
+
+  - name: Stage 45
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 44
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 46
+      - name: Step 45
+        run: echo "Job 45, Stage 45"
+
+  - name: Stage 46
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 45
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 47
+      - name: Step 46
+        run: echo "Job 46, Stage 46"
+
+  - name: Stage 47
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 46
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 48
+      - name: Step 47
+        run: echo "Job 47, Stage 47"
+
+  - name: Stage 48
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 47
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 49
+      - name: Step 48
+        run: echo "Job 48, Stage 48"
+
+  - name: Stage 49
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 48
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 50
+      - name: Step 49
+        run: echo "Job 49, Stage 49"
+
+  - name: Stage 50
     runs-on: ubuntu-latest
-    needs: Stage 2
+    needs: Stage 49
     steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 51
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 52
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 53
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 54
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 55
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 56
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 57
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 58
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 59
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 60
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 61
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 62
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 63
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 64
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 65
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 66
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 67
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 68
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 69
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 70
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 71
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 72
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 73
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 74
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 75
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 76
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 77
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 78
-    runs-on: ubuntu-latest
-    needs: Stage 2
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 78
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 79
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 80
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 81
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 82
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 83
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 84
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 85
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 86
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 87
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 88
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 89
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 90
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 91
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 92
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 93
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 94
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 95
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 96
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 97
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 98
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 99
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-- name: Stage 100
-    runs-on: ubuntu-latest
-    needs: Stage 79
-    steps:
-      - name: Step 3
-        run: echo "Job 3, Stage 3"
-            
+      - name: Step 50
+        run: echo "Job 50, Stage 50"
