--- a/.github/workflows/name: Large Workflow.yaml
+++ b/.github/workflows/name: Large Workflow.yaml
@@ -73,7 +73,7 @@ jobs:
       - name: Step 2
         run: 'echo "Job 2, Stage 2"'
 
-  Stage5:
+  StageRandom:
     runs-on: ubuntu-latest
     steps:
       - name: Step 1
